#3 - Fix : Autoprefixer css

--- a/assets/css/_normalize.scss
+++ b/assets/css/_normalize.scss
@@ -2,6 +2,7 @@
   scrollbar-width: thin;
   scrollbar-color: rgba(255, 255, 255, 0.5) #333333;
   font-family: "Comfortaa", sans-serif;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
