--- a/assets/css/_formSection.scss
+++ b/assets/css/_formSection.scss
@@ -14,6 +14,8 @@ main {
             background-color: #fff;
             .form-header {
                 padding: 1px;
+                display: -webkit-inline-box;
+                display: -ms-inline-flexbox;
                 display: inline-flex;
                 height: 50px;
                 border-radius: 8px;
@@ -63,6 +65,8 @@ main {
                 width: 100%;
                 .title {
                     @extend %center;
+                    -webkit-box-pack: start;
+                    -ms-flex-pack: start;
                     justify-content: flex-start;
                     height: 30px;
                     color: #646464;
@@ -71,6 +75,8 @@ main {
                     margin-bottom: 1rem;
                     &::after {
                         margin-left: 1rem;
+                        -webkit-box-flex: 1;
+                        -ms-flex: 1;
                         flex: 1;
                         height: 1px;
                         content: "";
@@ -138,11 +144,17 @@ main {
                         position: absolute;
                         right: 15px;
                         top: 50%;
+                        -webkit-transform: translateY(-50%);
+                        -ms-transform: translateY(-50%);
                         transform: translateY(-50%);
                         img {
+                            -webkit-filter: invert(26%) sepia(0%) saturate(0%) hue-rotate(333deg) brightness(97%)
+                                contrast(87%);
                             filter: invert(26%) sepia(0%) saturate(0%) hue-rotate(333deg) brightness(97%) contrast(87%);
                         }
                         .error-img {
+                            -webkit-filter: invert(56%) sepia(86%) saturate(4714%) hue-rotate(333deg) brightness(97%)
+                                contrast(107%);
                             filter: invert(56%) sepia(86%) saturate(4714%) hue-rotate(333deg) brightness(97%)
                                 contrast(107%);
                         }
